--- a/html5/mozilla-mission.html
+++ b/html5/mozilla-mission.html
@@ -64,7 +64,7 @@
       <header>
         <h2>We’re known for the Firefox Web Browser</h2>
       </header>
-        <img src="themes/mozilla/images/Fx-logo.png" class="middle" width="400" alt="Firefox">
+        <img src="themes/mozilla/images/firefox_logo-only_RGB" class="middle" width="400" alt="Firefox">
       <footer class="notes">
       </footer>
     </section>
